--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "declaration": true, // generate .d.ts files
     "sourceMap": true, // generate source map
+    "inlineSources": true,
     "outDir": "dist", // output compiled js, d.ts, and source map to dist folder
     "strict": true,
     "esModuleInterop": true
