--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   ],
   "scripts": {
     "lint": "eslint . --fix --max-warnings 0",
-    "format": "prettier --write \"./**/*.{js,json,md,ts}\"",
+    "format": "prettier --write \"./**/*.{js,json,md,ts,yaml,yml}\"",
     "test": "jest",
     "clean": "rimraf dist",
     "prebuild": "yarn clean && yarn lint",
     "build": "tsc",
     "postbuild": "yarn test",
     "preversion": "yarn build",
-    "postversion": "git push --follow-tags"
+    "postversion": "git push --follow-tags",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -33,11 +34,20 @@
     "eslint": "9.3.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
+    "husky": "9.0.11",
     "jest": "29.7.0",
+    "lint-staged": "15.2.5",
     "prettier": "3.2.5",
     "rimraf": "5.0.7",
     "ts-jest": "29.1.4",
     "typescript": "5.4.5",
     "typescript-eslint": "7.11.0"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "prettier --write",
+      "eslint --fix --max-warnings 0"
+    ],
+    "*.{json,md,yaml,yml}": "prettier --write"
   }
 }
