--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies ⚙️
         run: yarn --immutable
 
-      - name: Generate archive
+      - name: Generate archive 🏛️
         run: yarn pack
 
       - name: Publish
