--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Generate archive 🏛️
         run: yarn pack --filename package.tgz
 
-      - name: Publish
+      - name: Publish 📰
         run: npm publish package.tgz --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
