--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies ⚙️
         run: yarn --immutable
 
+      - name: Build project 🔧
+        run: yarn build
+
       - name: Generate archive 🏛️
         run: yarn pack --filename package.tgz
 
