--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install 🕝
-        run: yarn --immutable
+        run: yarn --immutable --verbose
 
       - name: Lint 🧐
         run: yarn lint
