--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,11 +16,10 @@ jobs:
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v4
         with:
-          node-version: 22
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 20
 
       - name: Install 🕝
-        run: yarn --immutable --verbose
+        run: yarn --immutable
 
       - name: Lint 🧐
         run: yarn lint
