--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "lint": "eslint . --fix --max-warnings 0",
     "format": "prettier --write \"./**/*.{js,json,md,ts,yaml,yml}\"",
+    "lint": "oxlint --fix --deny-warnings",
     "test": "jest",
     "clean": "rimraf dist",
     "build": "tsc",
@@ -26,24 +26,20 @@
   "author": "luthium",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "9.39.2",
     "@types/jest": "30.0.0",
-    "eslint": "9.39.2",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-prettier": "5.5.4",
     "husky": "9.1.7",
     "jest": "30.2.0",
     "lint-staged": "16.2.7",
+    "oxlint": "1.36.0",
     "prettier": "3.7.4",
     "rimraf": "6.1.2",
     "ts-jest": "29.4.6",
-    "typescript": "5.9.3",
-    "typescript-eslint": "8.51.0"
+    "typescript": "5.9.3"
   },
   "lint-staged": {
     "*.{ts,js}": [
       "prettier --write",
-      "eslint --fix --max-warnings 0"
+      "oxlint --fix --deny-warnings"
     ],
     "*.{json,md,yaml,yml}": "prettier --write"
   }
