--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
     "format": "prettier --write \"./**/*.{js,json,md,ts,yaml,yml}\"",
     "lint": "oxlint --fix --deny-warnings",
