updated oxlint rules and improved code quality

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -1,4 +1,37 @@
 {
   "plugins": ["import", "jsdoc", "vitest"],
+  "rules": {
+    "curly": "error",
+    "default-case": "error",
+    "eqeqeq": "error",
+    "no-console": "error",
+    "no-empty": "error",
+    "no-empty-function": "error",
+    "no-eq-null": "error",
+    "no-lone-blocks": "error",
+    "no-lonely-if": "error",
+    "no-nested-ternary": "error",
+    "no-return-assign": "error",
+    "no-sequences": "error",
+    "no-throw-literal": "error",
+    "no-useless-return": "error",
+    "no-var": "error",
+    "prefer-exponentiation-operator": "error",
+    "sort-imports": "error",
+    "yoda": "error",
+    "import/no-self-import": "error",
+    "oxc/no-accumulating-spread": "error",
+    "oxc/no-map-spread": "error",
+    "typescript/explicit-function-return-type": "error",
+    "typescript/no-explicit-any": "error",
+    "typescript/prefer-for-of": "error",
+    "unicorn/no-zero-fractions": "error",
+    "unicorn/prefer-array-find": "error",
+    "unicorn/prefer-set-has": "error",
+    "vitest/no-conditional-tests": "error",
+    "vitest/prefer-to-be-falsy": "error",
+    "vitest/prefer-to-be-object": "error",
+    "vitest/prefer-to-be-truthy": "error"
+  },
   "ignorePatterns": ["dist/**", "*.cjs"]
 }
